Milestone 4: fix overflow description

--- a/src/style/general.scss
+++ b/src/style/general.scss
@@ -3,10 +3,15 @@
 @use './partials/reset.scss';
 
 .container{
-    max-width: 100%;
-    margin: auto;
+    max-width: 1024px;
+    margin: 0 auto;
+    background-color: black;
+    color: white;
+    
   }
   .row{
     display: flex;
     flex-wrap: wrap;
+    gap: 20px;
+    
   }
